# django-nutrition

./: .gitignore  Changelog.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
django-nutrition/: README.md
django-nutrition/django_nutrition/: tailwind.config.js  urls.py  views.py
django-nutrition/django_nutrition/migrations/: 0001_initial.py  0003_alter_portion_date.py  0004_alter_portion_meal.py  0005_food_user_meal_user_portion_user.py  0006_alter_food_user_alter_meal_user_alter_portion_user.py  0007_preferences.py  0008_alter_preferences_user.py  0009_preferences_theme.py
django-nutrition/django_nutrition/templates/django_nutrition/: day.html  portion_confirm_delete.html
django-nutrition/django_nutrition/templates/nutrition/: days-calendar.html  days-table.html  days.html  food_form.html  foods.html  style-test.html
django-nutrition/django_nutrition/utils/: context_processors.py
django_nutrition/: admin.py  api.py  apps.py  models.py  tests.py  urls.py  views.py
django_nutrition/migrations/: 0001_initial.py  0002_alter_portion_quantity.py  0003_alter_portion_date.py  0004_alter_portion_meal.py  0005_food_user_meal_user_portion_user.py  0006_alter_food_user_alter_meal_user_alter_portion_user.py  0007_preferences.py  0008_alter_preferences_user.py  0009_preferences_theme.py
django_nutrition/templates/django_nutrition/: add_portion.html  base-form.html  base-simple.html  base.html  days-table.html  days.html  food_form.html  foods.html  header.html  login.html  meals.html  portions.html  user-preferences.html
django_nutrition/utils/: context_processors.py
fitness/: asgi.py  settings.py  urls.py  wsgi.py
nutrition/: admin.py  api.py  build-css.sh  models.py  package-lock.json  package.json  setup.md  tailwind.config.js  urls.py  views.py
nutrition/migrations/: 0001_initial.py  0002_alter_portion_quantity.py  0004_alter_portion_meal.py  0006_alter_food_user_alter_meal_user_alter_portion_user.py
nutrition/templates/nutrition/: add_portion.html  base-form.html  base-simple.html  base.html  day.html  days-table.html  days.html  foods.html  header.html  login.html  meals.html  portions.html  user-preferences.html
nutrition/utils/: context_processors.py
templates/registration/: logged_out.html
test_project/: settings.py  urls.py
(+4 files in other folders)
